# email-helper

./: Dockerfile  README.md  apps.txt  docker-compose.yml  entrypoint.sh  fill_database.py  pyproject.toml  requirements.txt
assets/admin/js/: sentemail_admin.js
core/: settings.py  urls.py
emails/: admin.py  models.py
emails/migrations/: 0001_initial.py
templates/admin/emails/sentemail/: change_form.html
